# drf-decorator-ordering-demo

./: README.md  manage.py  pyproject.toml
.github/workflows/: main.yml
APIViewOrdering/: asgi.py  settings.py  tests.py  urls.py  views.py  wsgi.py
